Search bar correctly redirects to search page. Styles broken down into separated files in order to increase readability

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,7 +14,7 @@
 .rightPanel {
   display: inline-flex;
   color: white;
-  margin-right: 8px;
+  margin-right: 20px;
 }
 .rightPanel a {
   font-size: 17px;
